docs: merge phần đào sâu vòng 2 của Codex (mô hình/luồng/sơ đồ Mermaid) vào 33 module
Cherry-pick nội dung từ commit 3cdf343 (chạy Codex bằng prompt "chương giáo
trình" — yêu cầu mỗi module có mô hình tư duy, luồng xử lý từng bước, sơ đồ
Mermaid, và phân tích "vì sao" sâu hơn "là gì") vào trên nền hiện tại của main
(đã có kiến thức sâu từ PR #4).

3cdf343 được viết dựa trên một bản base cũ hơn PR #4 nên cherry-pick tạo conflict
trên 15/33 file — đã rà từng file, giữ cả hai bên khi bổ sung cho nhau (đa số
trường hợp), chỉ bỏ bớt khi thật sự trùng lặp ý (module 11, 19, 28). Không mất
nội dung của bên nào một cách vô ý, không thêm bài tập mới.

Kết quả: 54 sơ đồ Mermaid (từ 1) trên 67 file, tất cả hợp lệ.

Đã validate lại toàn bộ trước khi commit: mkdocs build --strict sạch,
markdownlint-cli2 sạch 67 file, check-structure.py không lỗi chặn CI,
check-mermaid.mjs 54/54 sơ đồ hợp lệ.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>